# SCOM7330_SpeechLib_Tool

./: .gitignore  README.md  parser.py  pyproject.toml  scom_speechlib_tool.py  scomspeech.py
.github/workflows/: unittests.yml
scom7330/: config_reader.py  dtmfparsing.py  scomconfig.py  tables.py
scom7330/config/: bin.py
scomspeech/: __init__.py  cli.py  scomspeech.py
tests/: test_AudioData.py  test_Header.py  test_ImageHeader.py  test_Index.py  test_SpeechLib.py
tests/audiolib/: test_AudioData.py  test_Header.py  test_ImageHeader.py  test_Index.py  test_SpeechLib.py
tests/data/: .gitignore  SpLibEng_1.3.md5sums.json  SpLibEng_1.3.offsets.json
